# SAW-API-docs.yaml
@@ -51,13 +51,19 @@ paths:
       summary: Get Event List
       description: Returns a list of all current events
       operationId: getEventList
+      parameters:
+      - name: pageable
+        in: query
+        required: true
+        schema:
+          $ref: '#/components/schemas/Pageable'
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/CollectionModelEvent'
+                $ref: '#/components/schemas/CollectionModelEntityModelEvent'
     post:
       tags:
       - event-controller
@@ -343,6 +349,68 @@ components:
           writeOnly: true
           items:
             $ref: '#/components/schemas/TicketEntity'
+    Pageable:
+      type: object
+      properties:
+        page:
+          minimum: 0
+          type: integer
+          format: int32
+        size:
+          minimum: 1
+          type: integer
+          format: int32
+        sort:
+          type: array
+          items:
+            type: string
+    CollectionModelEntityModelEvent:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            events:
+              type: array
+              items:
+                $ref: '#/components/schemas/EntityModelEvent'
+        _links:
+          $ref: '#/components/schemas/Links'
+    EntityModelEvent:
+      required:
+      - description
+      - location
+      - price
+      - title
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        location:
+          type: string
+        price:
+          type: number
+          format: double
+        startingDate:
+          type: string
+          format: date
+        endingDate:
+          type: string
+          format: date
+        description:
+          type: string
+        userEntity:
+          $ref: '#/components/schemas/User'
+        ticketEntities:
+          uniqueItems: true
+          type: array
+          items:
+            $ref: '#/components/schemas/TicketEntity'
+        _links:
+          $ref: '#/components/schemas/Links'
     CollectionModelEvent:
       type: object
       properties:
